MODON MRE BPDEV/force-app/main/default/objects/Joint_Owner_History__c/Joint_Owner_History__c.object-meta.xml
<CustomObject>
    <label>Joint Owner History</label>
    <nameField>
        <displayFormat>JOH-{00000}</displayFormat>
        <label>Joint Owner History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Owner History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>