MODON MRE BPDEV/force-app/main/default/objects/Joint_Owner_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Owner History</relationshipLabel>
    <relationshipName>Joint_Owner_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>