MODON MRE BPDEV/force-app/main/default/objects/Joint_Owner_History__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership %</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>