MODON MRE BPDEV/force-app/main/default/objects/Joint_Owner_History__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Joint Owner History</relationshipLabel>
    <relationshipName>Joint_Owner_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>