MODON MRE BPDEV/force-app/main/default/objects/Joint_Owner_History__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Date</label>
    <type>Date</type>
</CustomField>